# llm-engineering-journey

./: .env.example  .gitignore  .pre-commit-config.yaml  README.MD  pyproject.toml
notebooks/: google_genai.py
src/llm_client/: __init__.py  base.py  chat.py  factory.py  pricing.py
src/llm_client/providers/: anthropic_provider.py  gemini_provider.py  openai_provider.py
tests/: test_chat.py  test_factory.py  test_google_genai.py  test_pricing.py
utils/: weather_info.py
validations/: google_genai_verify.py
