[project]
name = "llm-engineering-journey"
version = "0.1.0"
description = ""
authors = [
    {name = "Ronak Khandelwal",email = "ronakkhandlwl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.42.0,<3.0.0)",
    "anthropic (>=0.109.2,<0.110.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "google-genai (>=2.8.0,<3.0.0)"
]


[project.scripts]
chat = "llm_client.chat:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "llm_client", from = "src" }]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that hit external services",
]

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.17,<0.16.0)"
]
